<resources>
    <string name="app_name">RestaurantPlanner</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="friends_menu_item">Venner</string>
    <string name="restaurant_menu_item">Restaurant</string>
    <string name="booking_menu_item">Booking</string>
    <string name="title_activity_create_friend">CreateFriendActivity</string>
    <string name="title_activity_settings">Innstillinger</string>
    <string name="settings_enable_notifications_title">Skru på varsel tjenesten</string>
    <string name="settings_title_sms_service">Sms tjeneste</string>
    <string name="settings_enable_sms_title">Send sms til venner</string>
    <string name="settings_sms_message_title">Sms melding</string>
    <string name="settings_sms_message_default">Hei %friend,\njeg har booket bord hos %restaurant klokken %time.\n\nAddresse: %address\nTelefon: %phone\n\nVennlig hilsen</string>
    <string name="registrer_en_booking">Registrer en booking</string>
    <string name="submit">Send inn</string>
    <string name="registrer_en_venn">Registrer en venn</string>
    <string name="registrer_en_restaurant">Registrer en restaurant</string>
    <string name="navn">Navn</string>
    <string name="telefon">Telefon</string>
    <string name="addresse">Addresse</string>
    <string name="kategori">Kategori</string>
    <string name="lag_en_ny_booking">Lag en ny booking</string>
    <string name="dag_og_tid">Dag og tid:</string>
    <string name="antall_venner">Antall venner:</string>
    <string name="lag_en_ny_venn">Lag en ny venn</string>
    <string name="type">Type:</string>
    <string name="lag_ny_restaurant">Lag ny restaurant</string>
    <string name="rediger">Rediger</string>
    <string name="slett">Slett</string>
    <string name="pick_a_restaurant_title">Velg en restaurant</string>
    <string name="no_bookings">Du har ingen bookinger i listen. Opprett en ny med + knappen!</string>
    <string name="no_restaurant_title">Ingen restauranter</string>
    <string name="no_restaurant_body">Gå til restaurant panelet for å legge til en restaurant først.</string>
    <string name="changes_saved">Endring lagret!</string>
    <string name="added_new_friend">Du la til en ny venn!</string>
    <string name="edit_friend">Rediger en venn</string>
    <string name="no_friends">Du har ingen venner i listen. Opprett en ny venn med + knappen!</string>
    <string name="no_restaurant">Du har ingen restauranter i listen. Opprett en ny med + knappen!</string>
</resources>
